@@ -1,6 +1,7 @@
 version 2.0.13+cvs (cvs):
 	* Changed bug reporting address at configure.ac:AC_INIT
 	* undo/redo in the calling application (Liviu Andronic)
+	* gtkspell_get_suggestions_menu() (Liviu Andronic)
 
 version 2.0.13 (2008-05-20):
 	* Additional translations (see po/ChangeLog).
